--- a/.poggit.yml
+++ b/.poggit.yml
@@ -7,7 +7,7 @@ projects:
     - "resources/github"
     libs:
     - src: CortexPE/Commando/Commando
-      version: ^2.1.0
+      version: 3.1.0
     - src: muqsit/invmenu/InvMenu
       version: ^4.0.0
 ...
